:lipstick: fixing the screen cut on mobile device and in the pong game

--- a/src/styles/DashboardStyle.css
+++ b/src/styles/DashboardStyle.css
@@ -7,9 +7,20 @@
   display: flex;
 }
 
+#about {
+  margin: 10px;
+}
+
 @media (max-width: 800px) {
   #divImage {
     display: none;
+  }
+
+  #about {
+    margin-top: 75px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
   }
   /* #techUsedTypo {
     margin-top: 70px;
