--- a/src/styles/PongStyle.css
+++ b/src/styles/PongStyle.css
@@ -1,4 +1,5 @@
 #divMain {
+  margin-top: 75px;
   width: 100%;
   height: 100vh;
   display: flex;
